--- a/src/app/alertsList/alertsList.component.html
+++ b/src/app/alertsList/alertsList.component.html
@@ -1,1 +1,5 @@
-<p>alerts-list works!</p>
+<div class= "alertsStyle">
+    <h2>The tasks scheduled for today:</h2>
+    <br>
+    <p>Total tasks: {{ 0 }}</p>
+</div>
