--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<header></header>
-<br>
-<tasksList></tasksList>
-<editTask></editTask>
-<br>
-<br>
-<alert></alert>
+<body class = "generalStyle">
+    <header></header>
+    <br><br><br><br>
+    <tasksList></tasksList>
+    <br>
+    <br>
+    <alertsList></alertsList>
+</body>
