--- a/src/app/tasksList/tasksList.component.html
+++ b/src/app/tasksList/tasksList.component.html
@@ -1,2 +1,8 @@
-<h3>Total tasks on board:</h3>
-<p>Total tasks: {{ 0 }}</p>
+<div class= "tasksStyle">
+    <h2>Total tasks on board:</h2>
+    <br>
+    <editTask></editTask>
+    <br><br><br>
+    <p>Total tasks: {{ 0 }}</p>
+    <p>...the list...</p>
+</div>
