--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
-<body>
-    <h1>Welcome to your To Do Board !</h1>
-</body>
+<div class= "headerStyle">
+    <h1>Welcome to your <b>To Do Board</b> !</h1>
+</div>
