--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,6 @@
-.headerStyle {
+:host() {
     text-align: center;
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-column-end: span 2;
 }
