--- a/src/app/tasksList/taskEdit/editTask.component.css
+++ b/src/app/tasksList/taskEdit/editTask.component.css
@@ -1,5 +1,18 @@
 .inputField {
-    width: 40rem;
+    width: 30rem;
     height: 10rem;
     resize: none;
+}
+
+.dateField {
+    width: 30rem;
+    height: 5rem;
+    resize: none;
+}
+
+:host() {
+    align-self: center;
+    justify-self: center;
+    grid-row: 2;
+    grid-column: 1;
 }
