--- a/src/app/tasksList/taskEdit/editTask.component.html
+++ b/src/app/tasksList/taskEdit/editTask.component.html
@@ -1,3 +1,7 @@
-<textarea class= "inputField" type="text" placeholder="New task"></textarea>
+<h2>Add new task:</h2>
+<br>
+<textarea class= "inputField" type="text" placeholder="New task" #taskContent></textarea>
+<br>
+<input class= "dateField" type="date" placeholder="Due date" #taskDueDate>
 <br><br>
-<button>Add new task</button>
+<button (click) = "createTaskOnButtonClick(taskContent.value, taskDueDate.value)">Add new task</button>
