--- a/src/app/tasksList/tasksList.component.css
+++ b/src/app/tasksList/tasksList.component.css
@@ -1,4 +1,5 @@
-.tasksStyle {
-    position: relative;
-    left: 30rem;
+:host() {
+    justify-self: center;
+    grid-row: 3;
+    grid-column: 1;
 }
