--- a/src/app/tasksList/taskItem/task.component.html
+++ b/src/app/tasksList/taskItem/task.component.html
@@ -1,6 +1,6 @@
 
 <div class = "singleTaskStyle">    
-    <p><b>Task number:</b> {{ ind }}</p>
+    <p><b>Task number:</b> {{ index }}</p>
     <p><b>Creation date:</b> {{ task.creationDate | date:'shortDate' }}</p>
     <p><b>Content:</b> {{ task.content }}</p>
     <p><b>Due date:</b> {{ task.dueDate | date:'shortDate'}}</p>
