--- a/src/app/alertsList/alertsList.component.html
+++ b/src/app/alertsList/alertsList.component.html
@@ -1,4 +1,4 @@
 <h2>The tasks scheduled for today:</h2>
 <br>
 <p>Total tasks: {{ 0 }}</p>
-<alert *ngFor = "let task of tasks; let i = index" [task]="task" [ind]="i+1"></alert>
+<alert *ngFor = "let task of tasks" [task]="task"></alert>
