--- a/src/app/tasksList/taskItem/task.component.html
+++ b/src/app/tasksList/taskItem/task.component.html
@@ -1,8 +1,8 @@
 
 <div class="singleTaskStyle">    
-    <p><b>Task number:</b> {{ index }}</p>
-    <p><b>Creation date:</b> {{ task.creationDate | date:'shortDate' }}</p>
-    <p><b>Content:</b> {{ task.content }}</p>
-    <p><b>Due date:</b> {{ task.dueDate | date:'shortDate'}}</p>
+    <p><span class="bold">Task number: </span><span>{{ index }}</span></p>
+    <p><span class="bold">Creation date: </span><span>{{ task.creationDate | date:'shortDate' }}</span></p>
+    <p><span class="bold">Content: </span><span>{{ task.content }}</span></p>
+    <p><span class="bold">Due date: </span><span>{{ task.dueDate | date:'shortDate'}}</span></p>
 </div>
 <br>
