--- a/src/app/alertsList/alertsList.component.html
+++ b/src/app/alertsList/alertsList.component.html
@@ -1,3 +1,4 @@
 <h2>The tasks scheduled for today:</h2>
-<br>
-<alert *ngFor="let task of tasks" [task]="task"></alert>
+<div style="height: 50rem; overflow-y: auto;">
+    <alert *ngFor="let task of tasks" [task]="task"></alert>
+</div>
