--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,6 @@
 <h1>Welcome to your <b>To Do Board</b> !</h1>
+<br>
+<button class= "navigation-button"><a routerLink="/home">Home</a></button>
+<button class= "navigation-button"><a routerLink="/newTask">Add new task</a></button>
+<button class= "navigation-button"><a routerLink="/allTasksList">See all tasks list</a></button>
+<button class= "navigation-button"><a routerLink="/todaysTasks">Tasks list for today</a></button>
