--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,23 @@
 :host() {
     text-align: center;
-    grid-row-start: 1;
-    grid-column-start: 1;
-    grid-column-end: span 2;
+    grid-row: 1;
+    /* grid-column-start: 1; */
+    /* grid-column-end: span 2; */
+}
+
+.navigation-button {
+    background-color: white;
+    font-size: 1.3rem;
+    padding: 1rem 2.5rem;
+    border-radius: 0.8rem;
+    border: 2px solid crimson;
+    transition-duration: 0.3s;
+    display: block;
+    margin: 1.3rem auto;
+    font-family: cursive;
+}
+
+.navigation-button:hover {
+    background-color: crimson;
+    color: white;
 }
